# WGPU-Path-Tracer

./: .gitignore  Cargo.toml  build.rs  imgui.ini  wesl.toml
assets/: CornellBox.glb  CornellBox.gltf
src/: app.rs  main.rs  texture.rs
src/renderer/: gpu_context.rs  mod.rs  path_tracer.rs  renderer_state.rs  renderer_uniforms.rs  sobol_generator.rs
src/scene/: bvh.rs  camera.rs  mod.rs  model.rs  model_loader.rs  scene.rs
src/shaders/: brdf.wesl  constants.wesl  display.wgsl  intersection.wesl  package.wesl  path_tracer.wesl  path_tracer.wgsl  primitives.wesl  random.wesl  scene.wesl  tonemap.wesl
src/utils/: math.rs  mod.rs
