[package]
name = "wgpu_pathtracer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.10"
flume = "0.12.0"
gltf = "1.4.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
itertools = "0.15.0"
log = "0.4.30"
pollster = "0.4.0"
thiserror = "2.0.18"
wesl = { version = "0.4.0", features = ["naga-ext"] }
wgpu = "29.0.3"
winit = "0.30.13"

[build-dependencies]
wesl = { version = "0.4.0", features = ["naga-ext"] }
